<resources>
    <string name="app_name" translatable="false">HomeAssistanceFYP</string>
    <string name="login">LOGIN</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter your Password</string>
    <string name="forget"><u><b>Forgot Password?</b></u></string>
    <string name="signin">SIGN IN</string>
    <string name="changeLanguage"><b><u>Change Language</u></b></string>
    <string name="rememberme">remember me</string>
    <string name="loginwith">Or Login with</string>
    <string name="noAccount"><u><b>Dont have an account? Sign Up</b></u></string>
    <string name="signup">Sign Up</string>
    <string name="username">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phoneNo">03xx------</string>
    <string name="signUpwithSocialPlatform">Signup with social platform</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="customer" translatable="false">Customers</string>
    <string name="worker" translatable="false">Workers</string>
    <string name="job" translatable="false">Jobs</string>
    <string name="review" translatable="false">Reviews</string>
    <string name="transaction" translatable="false">Transacntions</string>
    <string name="stats" translatable="false">Statistics</string>
    <string name="earning" translatable="false">Earnings</string>
    <string name="nav_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="nav_drawer_close" translatable="false">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
