<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pic3"
    tools:context=".AdminIndex">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/holo_red_light"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbarSize="3dp">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/admin"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="110dp"
                android:background="@drawable/pic3"
                android:gravity="center_horizontal"
                android:scrollbarSize="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="80dp"
                    android:orientation="vertical"
                    android:paddingTop="90dp">

                    <Button
                        android:id="@+id/customers_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout5"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="30dp"
                        android:background="@android:color/holo_red_light"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/customer"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/worker_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:background="@android:color/holo_red_light"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/worker"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/jobs_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout5"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:background="@android:color/holo_red_light"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/job"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/review_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout5"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:background="@android:color/holo_red_light"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/review"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/Transcation_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout5"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:background="@android:color/holo_red_light"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/transaction"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="80dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/stats"
                        android:textColor="@color/white"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/customer"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/worker"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/earning"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>