<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pic2"
    tools:context=".SignUpInterface">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/relativeLayout1">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/holo_red_light"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:scrollbarSize="3dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:onClick="languageChangeButton"
                    android:paddingLeft="250dp"
                    android:text="@string/changeLanguage"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>



            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-2dp"
                    android:background="@color/editTextBG"
                    android:hint="@string/username"
                    android:paddingLeft="5dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-2dp"
                    android:background="@color/editTextBG"
                    android:hint="@string/email"
                    android:paddingLeft="5dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-2dp"
                    android:background="@color/editTextBG"
                    android:hint="@string/password"
                    android:paddingLeft="5dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-2dp"
                    android:background="@color/editTextBG"
                    android:hint="@string/phoneNo"
                    android:paddingLeft="5dp"
                    android:textSize="15sp" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout5"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <RadioGroup
                    android:id="@+id/RadioSignupCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radioSignuCustomer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="customers" />

                    <RadioButton
                        android:id="@+id/radioSignuWorker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="workers" />

                </RadioGroup>

            </RelativeLayout>


            <Button
                android:id="@+id/customers_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout6"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/holo_red_light"
                android:fontFamily="sans-serif-medium"
                android:onClick="signupClicked"
                android:text="@string/signup"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customers_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/signUpwithSocialPlatform"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/facebookBlue"
                    android:padding="10dp"
                    android:src="@drawable/img_facebook" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/twitterBlue"
                    android:padding="10dp"
                    android:src="@drawable/img_twitter" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/googleRed"
                    android:padding="10dp"
                    android:src="@drawable/img_googleplus" />

            </LinearLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>